--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "slugify": "^1.6.6"
+  },
+  "engines": {
+    "node": "^18.0.0"
   }
 }
